initial commit, imports addded to index.less

--- a/less/index.less
+++ b/less/index.less
@@ -1,1 +1,13 @@
 // Follow the order in the readme
+//Variable Import
+@import "variables.less";
+
+//Mixins import
+@import "mixins.less";
+
+//Feature import
+@import "reset.less";
+@import "global.less";
+@import "navigation.less";
+@import "footer.less";
+@import "home-page.less";
