--- a/css/index.css
+++ b/css/index.css
@@ -168,6 +168,31 @@ img {
   width: 100%;
   margin: 0 auto;
 }
+header {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+  border-bottom: 1px dashed gray;
+  height: 100px;
+}
+header .brand {
+  margin-left: 20%;
+  margin-top: auto;
+  margin-bottom: auto;
+}
+header .nav-bar {
+  margin-right: 20%;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-evenly;
+  align-items: center;
+}
+header .nav-bar a {
+  font-size: 1.5rem;
+  margin-right: 30px;
+  text-decoration: none;
+  color: black;
+}
 .footer {
   width: 100%;
   border-top: 2px dashed silver;
