--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,33 @@
 // Navigation Styles here
+
+header {
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: space-between;
+    border-bottom: 1px dashed gray;
+    height: 100px;
+
+
+    .brand {
+        margin-left: 20%;
+        margin-top: auto;
+        margin-bottom: auto;
+    }
+
+    .nav-bar {
+        margin-right: 20%;
+        display: flex;
+        flex-flow:row wrap;
+        justify-content: space-evenly;
+        align-items: center;
+
+        a {
+            font-size: 1.5rem;
+            margin-right: 30px;
+            text-decoration: none;
+            color: black;
+            }
+        }
+
+}
+
