--- a/css/index.css
+++ b/css/index.css
@@ -204,6 +204,13 @@ header .nav-bar a {
   font-size: 1.6rem;
   padding: 20px;
 }
+.home .welcome {
+  margin: 30px 0;
+  border-bottom: 1px dashed gray;
+}
+.home .welcome p {
+  margin: 10px 0 10px 0;
+}
 .home .content-section {
   margin: 30px 0;
   display: flex;
