--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,4 +1,12 @@
 .home {
+  .welcome {
+    margin: 30px 0;
+    border-bottom: 1px dashed gray;
+
+    p {
+      margin: 10px 0 10px 0;
+    }
+  }
 
   .content-section {
     margin: 30px 0;
