--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,1 +1,12 @@
 // Mixins in here
+.destination-btn(@bg:#008080; @textcolor:white; @radius:10px; @width:85%; @height:40px) {
+    background-color: @bg;
+    color: @textcolor;
+    border-radius: @radius;
+    width: @width;
+    height: @height;
+    font-size: 2rem;
+    text-align: center;
+    padding: 8px 0 0 8px;
+    border: 1px solid #E2E2E2;
+}
