--- a/css/index.css
+++ b/css/index.css
@@ -169,26 +169,26 @@ img {
   margin: 0 auto;
 }
 header {
+  border-bottom: 1px dashed #C0C0C0;
+  height: 100px;
+}
+header .top-bar {
+  max-width: 800px;
+  margin: 0 auto;
   display: flex;
   flex-flow: row nowrap;
   justify-content: space-between;
-  border-bottom: 1px dashed gray;
-  height: 100px;
+  align-items: center;
+  height: 100%;
 }
-header .brand {
-  margin-left: 20%;
-  margin-top: auto;
-  margin-bottom: auto;
-}
-header .nav-bar {
-  margin-right: 20%;
+header .top-bar .nav-bar {
   display: flex;
   flex-flow: row wrap;
   justify-content: space-evenly;
   align-items: center;
 }
-header .nav-bar a {
-  font-size: 1.5rem;
+header .top-bar .nav-bar a {
+  font-size: 1.75rem;
   margin-right: 30px;
   text-decoration: none;
   color: black;
