--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,33 +1,37 @@
 // Navigation Styles here
 
 header {
-    display: flex;
-    flex-flow: row nowrap;
-    justify-content: space-between;
-    border-bottom: 1px dashed gray;
+    border-bottom: 1px dashed @silver;
     height: 100px;
 
-
-    .brand {
-        margin-left: 20%;
-        margin-top: auto;
-        margin-bottom: auto;
-    }
-
-    .nav-bar {
-        margin-right: 20%;
+    .top-bar {
+        max-width: 800px;
+        margin: 0 auto;
         display: flex;
-        flex-flow:row wrap;
-        justify-content: space-evenly;
+        flex-flow:row nowrap;
+        justify-content: space-between;
         align-items: center;
+        height: 100%;
 
-        a {
-            font-size: 1.5rem;
-            margin-right: 30px;
-            text-decoration: none;
-            color: black;
-            }
+        // .brand {
+
+        // }
+
+        .nav-bar {
+            display: flex;
+            flex-flow:row wrap;
+            justify-content: space-evenly;
+            align-items: center;
+
+            a {
+                font-size: 1.75rem;
+                margin-right: 30px;
+                text-decoration: none;
+                color: black;
+                }
+
         }
+    }
 
 }
 
