--- a/css/index.css
+++ b/css/index.css
@@ -168,6 +168,11 @@ img {
   width: 100%;
   margin: 0 auto;
 }
+@media (max-width: 500px) {
+  .container {
+    padding: 0 30px;
+  }
+}
 header {
   border-bottom: 1px dashed #C0C0C0;
   height: 100px;
@@ -181,6 +186,13 @@ header .top-bar {
   align-items: center;
   height: 100%;
 }
+@media (max-width: 500px) {
+  header .top-bar {
+    padding: 0 30px;
+    flex-flow: column wrap;
+    justify-content: space-evenly;
+  }
+}
 header .top-bar .nav-bar {
   display: flex;
   flex-flow: row wrap;
@@ -192,6 +204,12 @@ header .top-bar .nav-bar a {
   margin-right: 30px;
   text-decoration: none;
   color: black;
+}
+@media (max-width: 500px) {
+  header .top-bar .nav-bar a {
+    font-size: 1.5rem;
+    margin-right: 15px;
+  }
 }
 .footer {
   width: 100%;
@@ -208,6 +226,11 @@ header .top-bar .nav-bar a {
   margin: 30px 0;
   border-bottom: 1px dashed gray;
 }
+@media (max-width: 500px) {
+  .home .welcome h1 {
+    font-size: 3rem;
+  }
+}
 .home .welcome p {
   margin: 10px 0 10px 0;
 }
@@ -217,13 +240,28 @@ header .top-bar .nav-bar a {
   flex-wrap: wrap;
   justify-content: space-between;
 }
+@media (max-width: 500px) {
+  .home .content-section {
+    flex-flow: column nowrap;
+  }
+}
 .home .content-section .text-content {
   width: 48%;
   padding-right: 1%;
 }
+@media (max-width: 500px) {
+  .home .content-section .text-content {
+    width: 100%;
+  }
+}
 .home .content-section .img-content {
   width: 48%;
   padding-left: 1%;
+}
+@media (max-width: 500px) {
+  .home .content-section .img-content {
+    width: 100%;
+  }
 }
 .home .content-section .img-content img {
   border-radius: 10px;
@@ -236,6 +274,11 @@ header .top-bar .nav-bar a {
   padding-left: 1%;
   padding-right: 0;
 }
+@media (max-width: 500px) {
+  .home .inverse-content .text-content {
+    order: -1;
+  }
+}
 .home .inverse-content .img-content {
   padding-right: 1%;
   padding-left: 0;
@@ -243,6 +286,11 @@ header .top-bar .nav-bar a {
 .home .content-destination {
   width: 75%;
   margin: 0 auto 30px;
+}
+@media (max-width: 500px) {
+  .home .content-destination {
+    width: 100%;
+  }
 }
 .home .content-destination img {
   border-radius: 10px;
@@ -253,9 +301,20 @@ header .top-bar .nav-bar a {
   display: flex;
   justify-content: space-between;
 }
+@media (max-width: 500px) {
+  .home .content-pick {
+    flex-flow: row wrap;
+    justify-content: center;
+  }
+}
 .home .content-pick .destination {
   width: 30%;
   margin-bottom: 30px;
+}
+@media (max-width: 500px) {
+  .home .content-pick .destination {
+    width: 100%;
+  }
 }
 .home .content-pick .destination .btn {
   background-color: #008080;
@@ -267,4 +326,18 @@ header .top-bar .nav-bar a {
   text-align: center;
   padding: 8px 0 0 8px;
   border: 1px solid #E2E2E2;
+}
+@media (max-width: 500px) {
+  .home .content-pick .destination .btn {
+    background-color: #17A2B8;
+    color: white;
+    border-radius: 10px;
+    width: 85%;
+    height: 40px;
+    font-size: 2rem;
+    text-align: center;
+    padding: 8px 0 0 8px;
+    border: 1px solid #E2E2E2;
+    width: 100%;
+  }
 }
