--- a/less/home-page.less
+++ b/less/home-page.less
@@ -3,6 +3,12 @@
     margin: 30px 0;
     border-bottom: 1px dashed gray;
 
+    @media @mobile {
+      h1 {
+        font-size: 3rem;
+      }
+    }
+
     p {
       margin: 10px 0 10px 0;
     }
@@ -14,16 +20,28 @@
     flex-wrap: wrap;
     justify-content: space-between;
 
+    @media @mobile {
+      flex-flow: column nowrap;     
+    }
+
    
     
     .text-content {
       width: 48%;
       padding-right: 1%;
+
+      @media @mobile {
+        width:100%;
+      }
     }
 
     .img-content {
       width: 48%;
       padding-left: 1%;
+
+      @media @mobile {
+        width:100%;
+      }
 
       img {
         border-radius: 10px;
@@ -38,6 +56,11 @@
     .text-content {
       padding-left: 1%;
       padding-right: 0;
+
+      @media @mobile {
+        order:-1;
+      }
+
     }
 
     .img-content {
@@ -50,6 +73,10 @@
     width: 75%;
     margin: 0 auto 30px;
 
+    @media @mobile {
+      width:100%;
+    }
+
     img {
       border-radius: 10px;
     }
@@ -61,12 +88,26 @@
     display: flex;
     justify-content: space-between;
 
+    @media @mobile {
+      flex-flow: row wrap;
+      justify-content: center;
+    }
+
     .destination {
       width: 30%;
       margin-bottom: 30px;
 
+      @media @mobile {
+        width: 100%;
+      }
+
       .btn {
         .destination-btn;
+
+        @media @mobile {
+          .destination-btn(@eastern-blue);
+          width:100%;
+        }
       }
     }
   }
