--- a/less/navigation.less
+++ b/less/navigation.less
@@ -13,6 +13,12 @@ header {
         align-items: center;
         height: 100%;
 
+        @media @mobile {
+            padding: 0 30px;
+            flex-flow: column wrap;
+            justify-content: space-evenly;
+        }
+
         // .brand {
 
         // }
@@ -23,11 +29,18 @@ header {
             justify-content: space-evenly;
             align-items: center;
 
+
+
             a {
                 font-size: 1.75rem;
                 margin-right: 30px;
                 text-decoration: none;
                 color: black;
+
+                @media @mobile {
+                    font-size: 1.5rem;
+                    margin-right: 15px;
+                }           
                 }
 
         }
