--- a/less/form.less
+++ b/less/form.less
@@ -29,11 +29,14 @@
 
         .btn {
             .destination-btn;
-            width:15%;
+            width:20%;
             padding:0px;
+            background-color: @eastern-blue;
 
             &:hover {
                 cursor:pointer;
+                background: white;
+                color: @eastern-blue
             }
         }
     }
